--- a/nirum.cabal
+++ b/nirum.cabal
@@ -18,7 +18,8 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Nirum.Constructs
+  exposed-modules:     Nirum.Cli
+                 ,     Nirum.Constructs
                  ,     Nirum.Constructs.Declaration
                  ,     Nirum.Constructs.DeclarationSet
                  ,     Nirum.Constructs.Identifier
@@ -34,6 +35,13 @@ library
                ,       megaparsec               >=4.4.0   && <5.0.0
                ,       text                     >=0.9.1.0 && <1.3
   hs-source-dirs:      src
+  default-language:    Haskell2010
+  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
+
+executable nirum
+  build-depends:       base   >=4.7     && <5
+               ,       nirum
+  main-is:             Main.hs
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
 
