--- a/nirum.cabal
+++ b/nirum.cabal
@@ -59,14 +59,16 @@ test-suite spec
                ,       Nirum.ParserSpec
                ,       Nirum.Targets.PythonSpec
   default-language:    Haskell2010
-  build-depends:       base            >=4.7     && <5
+  build-depends:       base                     >=4.7     && <5
                ,       directory
                ,       hspec
                ,       hspec-core
                ,       hspec-meta
-               ,       megaparsec      >=4.4.0   && <5.0.0
+               ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
+               ,       megaparsec               >=4.4.0   && <5.0.0
                ,       nirum
-               ,       text            >=0.9.1.0 && <1.3
+               ,       process                  >=1.1     && <2
+               ,       text                     >=0.9.1.0 && <1.3
   ghc-options:         -Wall -Werror
                        -fno-warn-incomplete-uni-patterns
                        -fno-warn-missing-signatures
