--- a/nirum.cabal
+++ b/nirum.cabal
@@ -31,6 +31,8 @@ library
                  ,     Nirum.Targets.Python
   build-depends:       base                     >=4.7     && <5
                ,       containers               >=0.5.6.2 && <0.6
+               ,       cmdargs                  >=0.10.14 && <0.11
+               ,       filepath                 >=1.4     && <1.5
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=4.4.0   && <5.0.0
                ,       text                     >=0.9.1.0 && <1.3
