--- a/nirum.cabal
+++ b/nirum.cabal
@@ -35,7 +35,7 @@ library
                ,       cmdargs                  >=0.10.14 && <0.11
                ,       filepath                 >=1.4     && <1.5
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
-               ,       megaparsec               >=4.4.0   && <5.0.0
+               ,       megaparsec               >=5       && <5.1
                ,       text                     >=0.9.1.0 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -69,9 +69,10 @@ test-suite spec
                ,       hspec-core
                ,       hspec-meta
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
-               ,       megaparsec               >=4.4.0   && <5.0.0
+               ,       megaparsec               >=5       && <5.1
                ,       nirum
                ,       process                  >=1.1     && <2
+               ,       semigroups
                ,       text                     >=0.9.1.0 && <1.3
   ghc-options:         -Wall -Werror
                        -fno-warn-incomplete-uni-patterns
