--- a/nirum.cabal
+++ b/nirum.cabal
@@ -28,11 +28,13 @@ library
                  ,     Nirum.Constructs.Name
                  ,     Nirum.Constructs.TypeDeclaration
                  ,     Nirum.Constructs.TypeExpression
+                 ,     Nirum.Package
                  ,     Nirum.Parser
                  ,     Nirum.Targets.Python
   build-depends:       base                     >=4.7     && <5
                ,       containers               >=0.5.6.2 && <0.6
                ,       cmdargs                  >=0.10.14 && <0.11
+               ,       directory                >=1.2.5   && <1.3
                ,       filepath                 >=1.4     && <1.5
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.1
@@ -60,11 +62,13 @@ test-suite spec
                ,       Nirum.Constructs.NameSpec
                ,       Nirum.Constructs.TypeDeclarationSpec
                ,       Nirum.Constructs.TypeExpressionSpec
+               ,       Nirum.PackageSpec
                ,       Nirum.ParserSpec
                ,       Nirum.Targets.PythonSpec
   default-language:    Haskell2010
   build-depends:       base                     >=4.7     && <5
                ,       directory
+               ,       filepath                 >=1.4     && <1.5
                ,       hspec
                ,       hspec-core
                ,       hspec-meta
