--- a/nirum.cabal
+++ b/nirum.cabal
@@ -49,6 +49,7 @@ executable nirum
   main-is:             Main.hs
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
+                       -threaded -with-rtsopts=-N
 
 test-suite spec
   type:                exitcode-stdio-1.0
@@ -83,6 +84,7 @@ test-suite spec
   ghc-options:         -Wall -Werror
                        -fno-warn-incomplete-uni-patterns
                        -fno-warn-missing-signatures
+                       -threaded -with-rtsopts=-N
 
 test-suite hlint
   type:                exitcode-stdio-1.0
