--- a/nirum.cabal
+++ b/nirum.cabal
@@ -31,6 +31,7 @@ library
                  ,     Nirum.Package
                  ,     Nirum.Parser
                  ,     Nirum.Targets.Python
+                 ,     Nirum.Version
   build-depends:       base                     >=4.7     && <5
                ,       containers               >=0.5.6.2 && <0.6
                ,       cmdargs                  >=0.10.14 && <0.11
@@ -38,6 +39,7 @@ library
                ,       filepath                 >=1.4     && <1.5
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.1
+               ,       semver                   >=0.3.0   && <1.0
                ,       text                     >=0.9.1.0 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -66,6 +68,7 @@ test-suite spec
                ,       Nirum.PackageSpec
                ,       Nirum.ParserSpec
                ,       Nirum.Targets.PythonSpec
+               ,       Nirum.VersionSpec
   default-language:    Haskell2010
   build-depends:       base                     >=4.7     && <5
                ,       containers               >=0.5.6.2 && <0.6
@@ -79,6 +82,7 @@ test-suite spec
                ,       nirum
                ,       process                  >=1.1     && <2
                ,       semigroups
+               ,       semver                   >=0.3.0   && <1.0
                ,       temporary                >=1.2     && <1.3
                ,       text                     >=0.9.1.0 && <1.3
   ghc-options:         -Wall -Werror
