--- a/nirum.cabal
+++ b/nirum.cabal
@@ -46,6 +46,7 @@ library
                ,       text                     >=0.9.1.0 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
+  default-extensions:  OverloadedStrings
   ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
 
 executable nirum
@@ -85,6 +86,7 @@ test-suite spec
                ,       Nirum.Targets.PythonSpec
                ,       Nirum.VersionSpec
   default-language:    Haskell2010
+  default-extensions:  OverloadedStrings
   build-depends:       base                     >=4.7     && <5
                ,       containers               >=0.5.6.2 && <0.6
                ,       directory
