--- a/nirum.cabal
+++ b/nirum.cabal
@@ -86,6 +86,7 @@ test-suite spec
                ,       Nirum.ParserSpec
                ,       Nirum.Targets.PythonSpec
                ,       Nirum.VersionSpec
+               ,       Util
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
   build-depends:       base                     >=4.7     && <5
