--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: c
 matrix:
   include:
+  - env: RESOLVER=lts-6.12 PY=3.5
+    os: osx
+    osx_image: xcode7.3
   - env: GHCVER=7.10.3 RESOLVER=lts-6.12 PY=3.4
     addons:
       apt:
@@ -25,21 +28,43 @@ cache:
   directories:
   - "$HOME/.stack"
   - "$HOME/.pyvenv"
+  - "$HOME/.ghc"
 before_install:
 - mkdir -p "$HOME/.local/bin"
 - export PATH="$HOME/.local/bin:$PATH"
-- travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C "$HOME/.local/bin" '*/stack'
+- |
+  if [[ "$TRAVIS_OS_NAME" = "osx" ]]
+  then
+    travis_retry curl -L https://www.stackage.org/stack/$TRAVIS_OS_NAME-x86_64 | tar xz --strip-components=1 --include '*/stack' -C "$HOME/.local/bin"
+  else
+    travis_retry curl -L https://www.stackage.org/stack/$TRAVIS_OS_NAME-x86_64 | tar xz --wildcards --strip-components=1 -C "$HOME/.local/bin" '*/stack'
+  fi
+- |
+  if [[ "$TRAVIS_OS_NAME" = "osx" ]]
+  then 
+    # always using Brew's latest Python3
+    brew update
+    brew install python3 || brew upgrade python3 || true
+  fi
+- if [[ "$TRAVIS_OS_NAME" = "osx" ]]; then brew install upx; fi
 - curl -o "$HOME/.local/bin/travis_long" -L https://raw.githubusercontent.com/futurice/fum2github/master/travis_long
 - chmod +x "$HOME/.local/bin/travis_long"
 install:
-- 'sed -E "s/resolver\s*:\s*.*/resolver: $RESOLVER/" stack.yaml > stack-new.yml'
-- mv stack-new.yml stack.yml
-- travis_long stack --no-terminal setup
-- pip install --user virtualenv
-- if [[ ! -f "$HOME/.pyvenv/bin/activate" ]]; then virtualenv -p "$(which python$PY)" "$HOME/.pyvenv"; fi
+- | 
+  if [[ "$TRAVIS_OS_NAME" = "osx" ]]
+  then
+    pip3 install --user virtualenv
+    if [[ ! -f "$HOME/.pyvenv/bin/activate" ]]; then pyvenv "$HOME/.pyvenv"; fi
+  else
+    pip install --user virtualenv
+    if [[ ! -f "$HOME/.pyvenv/bin/activate" ]]; then virtualenv -p "$(which python$PY)" "$HOME/.pyvenv"; fi
+  fi
 - '"$HOME/.pyvenv/bin/pip" install --upgrade pip setuptools'
 - '"$HOME/.pyvenv/bin/pip" install git+git://github.com/spoqa/nirum-python.git'
 - if [[ "$PY" = "3.4" ]]; then "$HOME/.pyvenv/bin/pip" install --upgrade typing; fi  # FIXME
+- 'sed -E "s/resolver\s*:\s*.*/resolver: $RESOLVER/" stack.yaml > stack-new.yml'
+- mv stack-new.yml stack.yml
+- travis_long stack --no-terminal setup
 script:
 - source "$HOME/.pyvenv/bin/activate" && stack --no-terminal test
 before_deploy:
@@ -47,7 +72,13 @@ before_deploy:
 - mkdir -p /tmp/nirum-build
 - export NIGHTLY_BINARY_PATH="/tmp/nirum-build/nirum-$(uname -s | tr '[A-Z]' '[a-z]')-$(uname -m)"
 - cp "$(stack path --local-bin-path)/nirum-static" "$NIGHTLY_BINARY_PATH"
-- upx-ucl -9 "$NIGHTLY_BINARY_PATH"
+- |
+  if [[ "$TRAVIS_OS_NAME" = "osx" ]]
+  then
+    upx -9 "$NIGHTLY_BINARY_PATH"
+  else
+    upx-ucl -9 "$NIGHTLY_BINARY_PATH"
+  fi
 notifications:
   webhooks:
     urls: ['https://webhooks.gitter.im/e/29cc2477daa438db4e9d']
