--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,6 @@ matrix:
   - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.5
     os: osx
     osx_image: xcode7.3
-  - env: GHCVER=7.10.3 RESOLVER=lts-6.12 PY=3.4
-    addons:
-      apt:
-        sources: [hvr-ghc, deadsnakes]
-        packages: [ghc-7.10.3, python3.4, libgmp10, upx-ucl]
-  - env: GHCVER=7.10.3 RESOLVER=lts-6.12 PY=3.5
-    addons:
-      apt:
-        sources: [hvr-ghc, deadsnakes]
-        packages: [ghc-7.10.3, python3.5, libgmp10, upx-ucl]
   - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.4
     addons:
       apt:
@@ -62,8 +52,8 @@ install:
 - '"$HOME/.pyvenv/bin/pip" install --upgrade pip setuptools'
 - '"$HOME/.pyvenv/bin/pip" install git+git://github.com/spoqa/nirum-python.git'
 - if [[ "$PY" = "3.4" ]]; then "$HOME/.pyvenv/bin/pip" install --upgrade typing; fi  # FIXME
-- 'sed -E "s/resolver\s*:\s*.*/resolver: $RESOLVER/" stack.yaml > stack-new.yml'
-- mv stack-new.yml stack.yml
+- 'sed -E "s/resolver\s*:\s*.*/resolver: $RESOLVER/" stack.yaml > stack-new.yaml'
+- mv stack-new.yaml stack.yaml
 - travis_long stack --no-terminal setup
 script:
 - source "$HOME/.pyvenv/bin/activate" && stack --no-terminal test
