--- a/nirum.cabal
+++ b/nirum.cabal
@@ -43,6 +43,7 @@ library
                ,       filepath                 >=1.4     && <1.5
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.1
+               ,       mtl                      >=2.2.1   && <3
                ,       semver                   >=0.3.0   && <1.0
                ,       text                     >=0.9.1.0 && <1.3
   hs-source-dirs:      src
@@ -98,6 +99,7 @@ test-suite spec
                ,       hspec-meta
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.1
+               ,       mtl                      >=2.2.1   && <3
                ,       nirum
                ,       process                  >=1.1     && <2
                ,       semigroups
