--- a/nirum.cabal
+++ b/nirum.cabal
@@ -19,6 +19,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Nirum.Cli
+                 ,     Nirum.CodeGen
                  ,     Nirum.Constructs
                  ,     Nirum.Constructs.Annotation
                  ,     Nirum.Constructs.Annotation.Internal
@@ -43,6 +44,7 @@ library
                ,       filepath                 >=1.4     && <1.5
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.1
+               ,       mtl                      >=2.2.1   && <3
                ,       semver                   >=0.3.0   && <1.0
                ,       text                     >=0.9.1.0 && <1.3
   hs-source-dirs:      src
@@ -72,6 +74,7 @@ test-suite spec
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       Nirum.CliSpec
+               ,       Nirum.CodeGenSpec
                ,       Nirum.Constructs.AnnotationSpec
                ,       Nirum.Constructs.DocsSpec
                ,       Nirum.Constructs.DeclarationSetSpec
@@ -98,6 +101,7 @@ test-suite spec
                ,       hspec-meta
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.1
+               ,       mtl                      >=2.2.1   && <3
                ,       nirum
                ,       process                  >=1.1     && <2
                ,       semigroups
