--- a/nirum.cabal
+++ b/nirum.cabal
@@ -1,9 +1,15 @@
 name:                nirum
 version:             0.1.0
-synopsis:            Distributed object framework built on top of
-                     REST HTTP and JSON
-description:         Distributed object framework for microservices,
-                     built on top of RESTful HTTP and JSON
+synopsis:            IDL compiler and RPC/distributed object framework for
+                     microservices
+description:         Nirum is an IDL compiler and RPC/distributed object
+                     framework for microservices, built on top of the modern
+                     Web server technologies such as RESTful HTTP and JSON.
+                     .
+                     You can find how its IDL looks like from source codes in
+                     the examples/ directory.
+                     .
+                     See also README.md for more details.
 homepage:            https://github.com/spoqa/nirum
 bug-reports:         https://github.com/spoqa/nirum/issues
 license:             GPL-3
