--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ install:
 - 'sed -E "s/resolver\s*:\s*.*/resolver: $RESOLVER/" stack.yaml > stack-new.yaml'
 - mv stack-new.yaml stack.yaml
 - travis_long stack --no-terminal setup
+- travis_long stack --no-terminal install scan
 script:
 - source "$HOME/.pyvenv/bin/activate" && stack --no-terminal test
 before_deploy:
@@ -66,6 +67,7 @@ before_deploy:
   then
     upx-ucl -9 "$NIGHTLY_BINARY_PATH"
   fi
+- stack exec -- scan $(find src test -name '*.hs')
 notifications:
   webhooks:
     urls: ['https://webhooks.gitter.im/e/29cc2477daa438db4e9d']
