--- a/nirum.cabal
+++ b/nirum.cabal
@@ -48,11 +48,16 @@ library
                ,       cmdargs                  >=0.10.14 && <0.11
                ,       directory                >=1.2.5   && <1.3
                ,       filepath                 >=1.4     && <1.5
+               ,       htoml                    >=1.0.0.0 && <1.1.0.0
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.1
                ,       mtl                      >=2.2.1   && <3
+               ,       parsec
+                       -- only for dealing with htoml's ParserError
                ,       semver                   >=0.3.0   && <1.0
                ,       text                     >=0.9.1.0 && <1.3
+               ,       unordered-containers
+                       -- only for dealing with htoml's data structures
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
@@ -109,6 +114,8 @@ test-suite spec
                ,       megaparsec               >=5       && <5.1
                ,       mtl                      >=2.2.1   && <3
                ,       nirum
+               ,       parsec
+                       -- only for dealing with htoml's ParserError
                ,       process                  >=1.1     && <2
                ,       semigroups
                ,       semver                   >=0.3.0   && <1.0
