Install nirum python runtime from git

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
 deps =
     six
     flake8
-    nirum
+    git+git://github.com/spoqa/nirum-python.git@0.3.1
     pytest
 commands =
     pip install -e ./nirum_fixture
