Tap deadsnakes for python34,35

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,9 @@ after_build:
 - ps: upx.exe -9 nirum-win-${env:PLATFORM}.exe
 test_script:
 - stack test
-- C:\mingw-w64\i686-5.3.0-posix-dwarf-rt_v4-rev0\mingw32\bin\bash test.sh
+# FIXME: duplicate code with test.sh
+- stack exec -- nirum -o nirum_fixture test/nirum_fixture
+- tox
 artifacts:
 - path: nirum-win-x86.exe
 - path: nirum-win-x64.exe
