--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
 language: c
 matrix:
   include:
-  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.5
+  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-10-10
     os: osx
     osx_image: xcode7.3
-  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.4
+  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-10-10
     addons:
       apt:
         sources: [hvr-ghc, deadsnakes]
-        packages: [ghc-8.0.1, python3.4, libgmp10, upx-ucl]
-  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.5
-    addons:
-      apt:
-        sources: [hvr-ghc, deadsnakes]
-        packages: [ghc-8.0.1, python3.5, libgmp10, upx-ucl]
+        packages: [ghc-8.0.1, python2.7, python3.4, python3.5, libgmp10, upx-ucl]
 cache:
   directories:
   - "$HOME/.stack"
@@ -31,9 +26,8 @@ before_install:
 - |
   if [[ "$TRAVIS_OS_NAME" = "osx" ]]
   then 
-    # always using Brew's latest Python3
-    brew update
-    brew install python3 || brew upgrade python3 || true
+    brew tap drolando/deadsnakes
+    brew install python34 python3 || brew upgrade python34 python35 || true
   fi
 - curl -o "$HOME/.local/bin/travis_long" -L https://raw.githubusercontent.com/futurice/fum2github/master/travis_long
 - chmod +x "$HOME/.local/bin/travis_long"
@@ -73,7 +67,6 @@ deploy:
     local_dir: /tmp/nirum-build
     on:
       branch: master
-      condition: '"$GHCVER" = "8.0.1" && "$PY" = "3.5"'
     upload-dir: travis-builds
     acl: public_read
     bucket: nightly-builds.nirum.org
