--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,17 @@
 language: c
 matrix:
   include:
-  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.5
+  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-10-10
     os: osx
     osx_image: xcode7.3
-  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.4
+  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-10-10
     addons:
       apt:
         sources: [hvr-ghc, deadsnakes]
-        packages: [ghc-8.0.1, python3.4, libgmp10, upx-ucl]
-  - env: GHCVER=8.0.1 RESOLVER=nightly-2016-08-15 PY=3.5
-    addons:
-      apt:
-        sources: [hvr-ghc, deadsnakes]
-        packages: [ghc-8.0.1, python3.5, libgmp10, upx-ucl]
+        packages: [ghc-8.0.1, python2.7, python3.4, python3.5, libgmp10, upx-ucl]
 cache:
   directories:
   - "$HOME/.stack"
-  - "$HOME/.pyvenv"
   - "$HOME/.ghc"
 before_install:
 - mkdir -p "$HOME/.local/bin"
@@ -32,32 +26,26 @@ before_install:
 - |
   if [[ "$TRAVIS_OS_NAME" = "osx" ]]
   then 
-    # always using Brew's latest Python3
-    brew update
-    brew install python3 || brew upgrade python3 || true
+    brew tap drolando/deadsnakes
+    brew install python34 python3 || brew upgrade python34 python35 || true
   fi
 - curl -o "$HOME/.local/bin/travis_long" -L https://raw.githubusercontent.com/futurice/fum2github/master/travis_long
 - chmod +x "$HOME/.local/bin/travis_long"
 install:
 - | 
-  if [[ "$TRAVIS_OS_NAME" = "osx" ]]
-  then
-    pip3 install --user virtualenv
-    if [[ ! -f "$HOME/.pyvenv/bin/activate" ]]; then pyvenv "$HOME/.pyvenv"; fi
+  if [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
+    pip3 install --user --upgrade tox pip setuptools
   else
-    pip install --user virtualenv
-    if [[ ! -f "$HOME/.pyvenv/bin/activate" ]]; then virtualenv -p "$(which python$PY)" "$HOME/.pyvenv"; fi
+    pip install --user --upgrade tox pip setuptools
   fi
-- '"$HOME/.pyvenv/bin/pip" install --upgrade pip setuptools'
-- '"$HOME/.pyvenv/bin/pip" install --upgrade git+git://github.com/spoqa/nirum-python.git'
-- if [[ "$PY" = "3.4" ]]; then "$HOME/.pyvenv/bin/pip" install --upgrade typing; fi  # FIXME
 - 'sed -E "s/resolver\s*:\s*.*/resolver: $RESOLVER/" stack.yaml > stack-new.yaml'
 - mv stack-new.yaml stack.yaml
 - travis_long stack --no-terminal setup
 - travis_long stack --no-terminal install scan
 script:
-- source "$HOME/.pyvenv/bin/activate" && stack --no-terminal test
+- stack --no-terminal test
 - ./lint.sh
+- ./test.sh
 before_deploy:
 - stack build --no-terminal --copy-bins
 - mkdir -p /tmp/nirum-build
@@ -79,7 +67,6 @@ deploy:
     local_dir: /tmp/nirum-build
     on:
       branch: master
-      condition: '"$GHCVER" = "8.0.1" && "$PY" = "3.5"'
     upload-dir: travis-builds
     acl: public_read
     bucket: nightly-builds.nirum.org
