--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,11 +28,7 @@ install:
     }
     $env:PATH = $env:STACK_ROOT + ';C:\msys64\usr\bin;' + $env:PATH;
 - if not exist "%LOCALAPPDATA%\Programs\stack" ( stack --no-terminal --skip-msys setup )
-- C:\Python35\python -m venv C:\pyvenv
-- >
-    C:\pyvenv\Scripts\Activate.bat &
-    python -m pip install --upgrade setuptools pip &
-    pip install --upgrade git+git://github.com/spoqa/nirum-python.git
+- C:\Python35\python -m pip install --upgrade tox pip setuptools
 build_script:
 - stack --no-terminal build --copy-bins
 after_build:
@@ -42,7 +38,10 @@ after_build:
 - ps: ls
 - ps: upx.exe -9 nirum-win-${env:PLATFORM}.exe
 test_script:
-- C:\pyvenv\Scripts\Activate.bat & stack test
+- stack test
+# FIXME: duplicate code with test.sh
+- stack exec -- nirum -o nirum_fixture test/nirum_fixture
+- C:\Python35\Scripts\tox
 artifacts:
 - path: nirum-win-x86.exe
 - path: nirum-win-x64.exe
