--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist =
 deps =
     six
     flake8
-    git+git://github.com/spoqa/nirum-python.git@0.3.1
+    nirum>=0.3.7
     pytest
 commands =
     pip install -e ./nirum_fixture
