--- a/nirum.cabal
+++ b/nirum.cabal
@@ -69,7 +69,9 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
-  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns
+  ghc-options:         -Wall -Werror
+                       -fwarn-incomplete-uni-patterns
+                       -fprint-explicit-kinds
 
 executable nirum
   build-depends:       base   >=4.7     && <5
