--- a/nirum.cabal
+++ b/nirum.cabal
@@ -51,12 +51,12 @@ library
                ,       bytestring
                ,       containers               >=0.5.6.2 && <0.6
                ,       cmdargs                  >=0.10.14 && <0.11
-               ,       directory                >=1.2.5   && <1.3
+               ,       directory                >=1.2.5   && <1.4
                ,       email-validate           >=2.0.0   && <3.0.0
                ,       filepath                 >=1.4     && <1.5
                ,       htoml                    >=1.0.0.0 && <1.1.0.0
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
-               ,       megaparsec               >=5       && <5.2
+               ,       megaparsec               >=5       && <5.3
                ,       mtl                      >=2.2.1   && <3
                ,       parsec
                        -- only for dealing with htoml's ParserError
@@ -118,28 +118,29 @@ test-suite spec
                ,       Util
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings
-  build-depends:       base                     >=4.7     && <5
+  -- omit version specifiers for shared dependencies to library
+  build-depends:       base
                ,       bytestring
-               ,       containers               >=0.5.6.2 && <0.6
+               ,       containers
                ,       directory
-               ,       email-validate           >=2.0.0   && <3.0.0
-               ,       filepath                 >=1.4     && <1.5
+               ,       email-validate
+               ,       filepath
                ,       hspec
                ,       hspec-core
                ,       hspec-meta
-               ,       htoml                    >=1.0.0.0 && <1.1.0.0
-               ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
-               ,       megaparsec               >=5       && <5.2
-               ,       mtl                      >=2.2.1   && <3
+               ,       htoml
+               ,       interpolatedstring-perl6
+               ,       megaparsec
+               ,       mtl
                ,       nirum
                ,       parsec
                        -- only for dealing with htoml's ParserError
                ,       process                  >=1.1     && <2
                ,       semigroups
-               ,       semver                   >=0.3.0   && <1.0
+               ,       semver
                ,       string-qq                >=0.0.2   && <0.1.0
                ,       temporary                >=1.2     && <1.3
-               ,       text                     >=0.9.1.0 && <1.3
+               ,       text
   ghc-options:         -Wall -Werror
                        -fno-warn-incomplete-uni-patterns
                        -fno-warn-missing-signatures
@@ -150,5 +151,6 @@ test-suite hlint
   hs-source-dirs:      test
   main-is:             HLint.hs
   default-language:    Haskell2010
-  build-depends:       base        >=4.7     && <5
+  -- omit version specifiers for shared dependencies to library
+  build-depends:       base
                ,       hlint       >=1.9     && <2
