--- a/nirum.cabal
+++ b/nirum.cabal
@@ -45,10 +45,13 @@ library
                  ,     Nirum.Package.ModuleSet
                  ,     Nirum.Parser
                  ,     Nirum.Targets
+                 ,     Nirum.Targets.Docs
                  ,     Nirum.Targets.List
                  ,     Nirum.Targets.Python
                  ,     Nirum.Version
   build-depends:       base                     >=4.7     && <5
+               ,       blaze-html
+                       -- only for rendering shakespeare's markup tree
                ,       bytestring
                ,       cmark                    >=0.5     && <0.6
                ,       containers               >=0.5.6.2 && <0.6
@@ -64,6 +67,7 @@ library
                ,       parsec
                        -- only for dealing with htoml's ParserError
                ,       semver                   >=0.3.0   && <1.0
+               ,       shakespeare              >=2.0.12  && <2.1
                ,       template-haskell         >=2.11    && <3
                ,       text                     >=0.9.1.0 && <1.3
                ,       unordered-containers
