Add Python 3.6 in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
         - python2.7
         - python3.4
         - python3.5
+        - python3.6
         - libgmp10
         - upx-ucl
 cache:
