--- a/nirum.cabal
+++ b/nirum.cabal
@@ -58,6 +58,7 @@ library
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.3
                ,       mtl                      >=2.2.1   && <3
+               ,       optparse-applicative     >=0.13.1  && <0.14
                ,       parsec
                        -- only for dealing with htoml's ParserError
                ,       semver                   >=0.3.0   && <1.0
@@ -133,6 +134,7 @@ test-suite spec
                ,       megaparsec
                ,       mtl
                ,       nirum
+               ,       optparse-applicative     >=0.13.1  && <0.14
                ,       parsec
                        -- only for dealing with htoml's ParserError
                ,       process                  >=1.1     && <2
