--- a/nirum.cabal
+++ b/nirum.cabal
@@ -51,8 +51,8 @@ library
                  ,     Nirum.Targets.Python
                  ,     Nirum.Version
   build-depends:       base                     >=4.7     && <5
-               ,       blaze-html
-                       -- only for rendering shakespeare's markup tree
+               ,       blaze-html               >=0.8.1.3 && <0.9
+               ,       blaze-markup             >=0.7.1.1 && <0.8
                ,       bytestring
                ,       cmark                    >=0.5     && <0.6
                ,       containers               >=0.5.6.2 && <0.6
