--- a/nirum.cabal
+++ b/nirum.cabal
@@ -59,6 +59,7 @@ library
                ,       directory                >=1.2.5   && <1.4
                ,       email-validate           >=2.0.0   && <3.0.0
                ,       filepath                 >=1.4     && <1.5
+               ,       fsnotify                 >=0.2.1   && <0.3.0
                ,       htoml                    >=1.0.0.0 && <1.1.0.0
                ,       interpolatedstring-perl6 >=1.0.0   && <1.1.0
                ,       megaparsec               >=5       && <5.3
@@ -68,6 +69,7 @@ library
                        -- only for dealing with htoml's ParserError
                ,       semver                   >=0.3.0   && <1.0
                ,       shakespeare              >=2.0.12  && <2.1
+               ,       stm                      >=2.4.4.1
                ,       template-haskell         >=2.11    && <3
                ,       text                     >=0.9.1.0 && <1.3
                ,       unordered-containers
