--- a/nirum.cabal
+++ b/nirum.cabal
@@ -122,6 +122,7 @@ test-suite spec
                ,       Nirum.PackageSpec
                ,       Nirum.ParserSpec
                ,       Nirum.Targets.PythonSpec
+               ,       Nirum.Targets.DocsSpec
                ,       Nirum.TargetsSpec
                ,       Nirum.VersionSpec
                ,       Util
