--- a/nirum.cabal
+++ b/nirum.cabal
@@ -151,6 +151,7 @@ test-suite spec
                ,       string-qq                >=0.0.2   && <0.1.0
                ,       temporary                >=1.2     && <1.3
                ,       text
+               ,       unordered-containers
   ghc-options:         -Wall -Werror
                        -fno-warn-incomplete-uni-patterns
                        -fno-warn-missing-signatures
