Do not give extra newline

--- a/package.yaml
+++ b/package.yaml
@@ -1,16 +1,15 @@
 name: nirum
 version: '0.3.0'
 synopsis: ! >
-  IDL compiler and RPC/distributed object framework for microservices
+  IDL compiler and RPC/distributed object framework for
+  microservices
 description: ! >
   Nirum is an IDL compiler and RPC/distributed object
   framework for microservices, built on top of the modern
   Web server technologies such as RESTful HTTP and JSON.
 
-
   You can find how its IDL looks like from source codes in
   the examples/ directory.
-
 
   See also README.md for more details.
 category: Language
