--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ matrix:
         - python3.6
         - libgmp10
         - upx-ucl
+env:
+# Remove following environment variables after nirum-python 0.6.0 is released.
+- DEVRUNTIME_REPO=dahlia/nirum-python DEVRUNTIME_REF=transport
 cache:
   directories:
   - "$HOME/.stack"
