--- a/stack.yaml
+++ b/stack.yaml
@@ -2,6 +2,9 @@ resolver: lts-9.10
 flags: {}
 packages:
 - '.'
+- location:
+    git: https://github.com/spoqa/codecov-haskell.git
+    commit: 8448801f8d01624e4cd60420beb3fdc85c099576
 extra-deps:
 - uri-0.1.6.4
 extra-package-dbs: []
