--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
 - PIP_MINVER=9.0.1 SETUPTOOLS_MINVER=36.6.0
 cache:
   directories:
+  - "$HOME/.cabal"
   - "$HOME/.stack"
   - "$HOME/.ghc"
   - "$HOME/Library/Caches/Homebrew"
@@ -63,7 +64,7 @@ install:
 - python3 -m pip install --user --upgrade tox "pip>=$PIP_MINVER" setuptools
 - travis_long stack --no-terminal setup
 - travis_long stack --no-terminal install scan -j4
-- travis_long stack --no-terminal install --only-dependencies
+- travis_long stack --no-terminal install -j4 --only-dependencies
 script:
 - 'TOX="$(which tox)" stack --no-terminal test -j4 --coverage'
 - ./lint.sh
