Checks to require attention when code is changed

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist =
     buildfixture
+    # CHECK: When the list of supported Python versions change,
+    # synchronize the change with .travis.yml and appveyor.yml too.
     py27
     py34
     py35
