--- a/package.yaml
+++ b/package.yaml
@@ -33,9 +33,16 @@ flags:
     description: Static link
     manual: true
     default: false
-ghc-options:
-- -Wall
-- -Werror
+when:
+- condition: os(darwin)
+  else:
+    ghc-options:
+    - -Werror
+  then:
+    ghc-options:
+    - -Werror
+    - -optP-Wno-nonportable-include-path
+    # The above option works around https://github.com/haskell/cabal/issues/4739
 dependencies:
 - base >=4.7 && <5
 - blaze-html >=0.9.0.1 && <0.10
@@ -46,7 +53,7 @@ dependencies:
 - filepath >=1.4 && <1.5
 - htoml >=1.0.0.0 && <1.1.0.0
 - interpolatedstring-perl6 >=1.0.0 && <1.1.0
-- megaparsec >=5 && <5.4
+- megaparsec >=6.3 && <6.4
 - mtl >=2.2.1 && <3
 - parsec  # only for dealing with htoml's ParserError
 - pretty >=1.1.3 && <2
@@ -56,6 +63,7 @@ dependencies:
 library:
   source-dirs: src
   ghc-options:
+  - -Wall
   - -fwarn-incomplete-uni-patterns
   - -fprint-explicit-kinds
   other-modules:
@@ -65,7 +73,7 @@ library:
   - cmark >=0.5 && <0.6
   - fsnotify >=0.2.1 && <0.3.0
   - heterocephalus >=1.0.5 && <1.1.0
-  - optparse-applicative >=0.13.1 && <0.14
+  - optparse-applicative >=0.14 && <0.15
   - shakespeare >=2.0.12 && <2.1
   - stm >=2.4.4.1
   - template-haskell >=2.11 && <3
@@ -75,6 +83,7 @@ executables:
     main: nirum.hs
     source-dirs: app
     dependencies:
+    - base
     - nirum
     when:
     - condition: flag(static)
@@ -83,6 +92,7 @@ executables:
         - condition: os(darwin) || os(windows)
           then:
             ghc-options:
+            - -Wall
             - -fwarn-incomplete-uni-patterns
             - -threaded
             - -with-rtsopts=-N
@@ -91,6 +101,7 @@ executables:
             - -optc-Os
           else:
             ghc-options:
+            - -Wall
             - -fwarn-incomplete-uni-patterns
             - -threaded
             - -with-rtsopts=-N
@@ -102,21 +113,24 @@ executables:
             - -fPIC
       else:
         ghc-options:
+        - -Wall
         - -fwarn-incomplete-uni-patterns
         - -threaded
         - -with-rtsopts=-N
 tests:
   hlint:
-    main: HLint.hs
-    source-dirs: test
+    main: lint.hs
     dependencies:
     - hlint >=2.0.9 && <2.1
   spec:
-    main: Spec.hs
-    source-dirs: test
+    main: Main.hs
+    source-dirs:
+    - test
     ghc-options:
+    - -Wall
     - -fno-warn-incomplete-uni-patterns
     - -fno-warn-missing-signatures
+    - -Wno-missing-signatures
     - -threaded
     - -with-rtsopts=-N
     dependencies:  # omit version specifiers for shared dependencies to library
