Fix broken build on Windows
> Error: While constructing the build plan, the following exceptions were encountered:
> In the dependencies for turtle-1.4.5:
>     Win32-2.5.4.1 from stack configuration does not match >=2.2.0.1 && <2.4 (latest matching version
>                   is 2.3.1.1)
> needed due to nirum-0.3.0 -> turtle-1.4.5
> Some potential ways to resolve this:
>   * Recommended action: try adding the following to your extra-deps
>     in C:\projects\nirum-k5n5y\stack.yaml:
> - Win32-2.3.1.1
>   * Set 'allow-newer: true' to ignore all version constraints and build anyway.
>   * You may also want to try using the 'stack solver' command.
> Plan construction failed.

[changelog skip]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,10 +22,10 @@ install:
 - ps: >
     if((Test-Path $env:STACK_ROOT) -ne $true) {
       if($env:PLATFORM -eq 'x86') {
-        $stackUrl = 'https://www.stackage.org/stack/windows-i386';
+        $stackUrl = 'https://github.com/commercialhaskell/stack/releases/download/v1.6.5/stack-1.6.5-windows-i386.zip';
       }
       elseif($env:PLATFORM -eq 'x64') {
-        $stackUrl = 'https://www.stackage.org/stack/windows-x86_64';
+        $stackUrl = 'https://github.com/commercialhaskell/stack/releases/download/v1.6.5/stack-1.6.5-windows-x86_64.zip';
       }
       Invoke-WebRequest -OutFile C:\stack.zip $stackUrl;
       Add-Type -AssemblyName System.IO.Compression.FileSystem;
@@ -49,6 +49,7 @@ install:
 - set
 
 - C:\Python36\python -m pip install --upgrade tox pip setuptools
+- stack --no-terminal install -j4 happy  # haskell-src-exts requires happy
 - stack --no-terminal install -j4 --only-dependencies
 build_script:
 - stack --no-terminal build -j4 --copy-bins --flag nirum:static
